--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz@1,8..144&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300;400&family=Merriweather:wght@700&display=swap");
 .storyTitle {
     font-family: "Roboto Slab";
 }
