--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300;400&family=Merriweather:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,500&family=Secular+One&display=swap");
 .storyTitle {
     font-family: "Roboto Slab";
 }
